# res_forecasting

./: .env  .gitignore  README.md  pyproject.toml  pytest.ini
res_forecasting/data/: weather_data.json
res_forecasting/weather_service/: storage_client.py  weather_client.py
tests/: test_clients.py
